Fixed i3 media controls

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -166,3 +166,8 @@ bindsym $mod+P exec flameshot gui
 # change keyboard layout english, arabic
 exec "setxkbmap -layout us,ar"
 exec "setxkbmap -option 'grp:alt_shift_toggle'"
+
+# Media volume controls
+bindsym XF86AudioMute exec amixer sset 'Master' toggle
+bindsym XF86AudioLowerVolume exec amixer sset 'Master' 5%-
+bindsym XF86AudioRaiseVolume exec amixer sset 'Master' 5%+
