--- a/.config/i3/i3blocks.conf
+++ b/.config/i3/i3blocks.conf
@@ -84,3 +84,12 @@ command=date '+%A, %d %B %Y %H:%M:%S '
 interval=1
 #align=right
 #min_width=            Thursday, 30 September 2017
+
+[i3volume]
+label=
+command=~/i3-volume/volume output i3blocks
+interval=once
+signal=10
+color=#b8bb26
+separator_block_width=10
+markup=pango
