--- a/.config/i3/i3blocks.conf
+++ b/.config/i3/i3blocks.conf
@@ -9,9 +9,17 @@
 # The top properties below are applied to every block, but can be overridden.
 # Each block command defaults to the script name to avoid boilerplate.
 command=/usr/share/i3blocks/$BLOCK_NAME
-separator_block_width=30
+separator_block_width=20
 separator=false
 markup=none
+
+# Weather
+[weather]
+label=☁️
+command=curl -Ss 'https://wttr.in/?0&T&Q' | cut -c 16- | head -2 | xargs echo
+interval=3600
+#color=#9FE697
+separator=true
 
 # CPU usage
 #
@@ -21,14 +29,14 @@ markup=none
 label= CPU
 interval=5
 #min_width=CPU: 100.00%
-#separator=false
+separator=true
 
 # Memory usage
 #
 # The type defaults to "mem" if the instance is not specified.
 [memory]
 label= RAM
-#separator=false
+separator=true
 interval=10
 
 # Disk usage
@@ -42,10 +50,10 @@ label= Disk
 interval=240
 
 [bandwidth]
-instance=eth0
+instance=wlp2s0
 label=
 interval=5
-
+separator=true
 # Network interface monitoring
 #
 # If the instance is not specified, use the interface used for default route.
@@ -82,6 +90,7 @@ interval=120
 label=
 command=date '+%A, %d %B %Y %H:%M:%S '
 interval=1
+separator=true
 #align=right
 #min_width=            Thursday, 30 September 2017
 
@@ -93,12 +102,15 @@ signal=10
 color=#b8bb26
 separator_block_width=10
 markup=pango
+separator=true
+
 
 [battery-plus]
 command=~/.config/i3/battery-plus
 markup=pango
 instance=BAT0
 interval=30
+separator=true
 #_PERCENT=&#x25;
 #_HIDE_IF_CHARGED=false
 #_USE_BATT_GRADIENT=false
