--- a/.config/i3/config
+++ b/.config/i3/config
@@ -189,3 +189,6 @@ mode "$mode_system" {
 }
 
 bindsym $mod+BackSpace mode "$mode_system"
+
+# Enable NumLock on startup
+exec_always --no-startup-id numlockx on
