--- a/.config/i3/config
+++ b/.config/i3/config
@@ -193,5 +193,5 @@ bindsym $mod+BackSpace mode "$mode_system"
 # Enable NumLock on startup
 exec_always --no-startup-id numlockx on
 
-# Vmware ClipBoard fix (Uncomment when using vm)
-#exec_always --no-startup-id vmware-user
+# Vmware ClipBoard fix and file drag&drop (Uncomment when using vm) https://superuser.com/questions/1632506/i3-in-vmware-doesnt-share-clipboard-with-host-windows-machine
+#exec_always --no-startup-id vmware-user-suid-wrapper
