--- a/.config/i3/i3blocks.conf
+++ b/.config/i3/i3blocks.conf
@@ -1,102 +1,61 @@
-# i3blocks config file
-#
-# Please see man i3blocks for a complete reference!
-# The man page is also hosted at http://vivien.github.io/i3blocks
-#
+############ i3blocks config (clean, deduplicated) ############
 
 # Global properties
-#
-# The top properties below are applied to every block, but can be overridden.
-# Each block command defaults to the script name to avoid boilerplate.
 command=/usr/share/i3blocks/$BLOCK_NAME
-separator_block_width=20
+separator_block_width=15
 separator=false
-markup=none
+markup=pango
 
-# Weather
+# # Weather (simple one-line from wttr.in)
 [weather]
-label=☁️
-command=curl -Ss 'https://wttr.in/?0&T&Q' | cut -c 16- | head -2 | xargs echo
-interval=3600
-#color=#9FE697
+label=🌤️ 
+command=curl -Ss 'https://wttr.in/?0&T&Q&format=1' 2>/dev/null || echo "Weather N/A"
+interval=1800
+color=#87CEEB
 separator=true
 
 # CPU usage
-#
-# The script may be called with -w and -c switches to specify thresholds,
-# see the script for details.
 [cpu_usage]
-label= CPU
+label=🖥️ 
 interval=5
-#min_width=CPU: 100.00%
+min_width=🖥️ 100%
+color=#FF6B6B
 separator=true
 
 # Memory usage
-#
-# The type defaults to "mem" if the instance is not specified.
 [memory]
-label= RAM
+label=🧠 
 separator=true
-interval=10
+interval=30
+color=#4ECDC4
 
 # Disk usage
-#
-# The directory defaults to $HOME if the instance is not specified.
-# The script may be called with a optional argument to set the alert
-# (defaults to 10 for 10%).
 [disk]
-label= Disk
-#instance=/mnt/data
-interval=240
-
-[bandwidth]
-instance=wlp2s0
-label=
-interval=5
+label=💾 
+interval=300
+color=#45B7D1
 separator=true
-# Network interface monitoring
-#
-# If the instance is not specified, use the interface used for default route.
-# The address can be forced to IPv4 or IPv6 with -4 or -6 switches.
+
+# Network bandwidth (adjust instance to your interface if needed)
+[bandwidth]
+instance=wlo1
+label=📡 
+interval=5
+color=#96CEB4
+separator=true
+
+# VPN status (shows when tun0 exists)
 [iface]
 instance=tun0
 color=#3BB92D
-label=
-interval=120
-#separator=false
-
-# Battery indicator
-#
-# The battery instance defaults to 0.
-#[battery]
-#label=BAT
-#label=⚡
-#instance=1
-#interval=30
-
-# Temperature
-#
-# Support multiple chips, though lm-sensors.
-# The script may be called with -w and -c switches to specify thresholds,
-# see the script for details.
-#[temperature]
-#label=TEMP
-#interval=10
-
-# Date Time
-#
-[time]
-#color=#9FE697
-label=
-command=date '+%A, %d %B %Y %H:%M:%S '
-interval=1
+label=🔒 VPN 
+interval=10
 separator=true
-#align=right
-#min_width=            Thursday, 30 September 2017
 
+# Volume (using i3-volume script)
 [i3volume]
 label=
-command=~/i3-volume/volume output i3blocks
+command=~/.config/i3/i3-volume/volume output i3blocks
 interval=once
 signal=10
 color=#b8bb26
@@ -105,48 +64,18 @@ markup=pango
 separator=true
 
 
+# Battery indicator (external script)
 [battery-plus]
 command=~/.config/i3/battery-plus
 markup=pango
 instance=BAT0
 interval=30
 separator=true
-#_PERCENT=&#x25;
-#_HIDE_IF_CHARGED=false
-#_USE_BATT_GRADIENT=false
-#_SYMBOLS_ONLY=false
-#_HIDE_PERCENTAGE=false
-#_HIDE_TIME_REMAINING=true
-#_HIDE_TIME_TO_FULL=true
-#_SHOW_CHARGE_DIRECTION=true
-#_CAPACITY_ALERT=75
-#_CRITICAL_ACTION=notify
-#_LOW_ACTION=notify
-#_NOTIFY_PROGRAM=notify-send
-#_NOTIFY_EXPIRES=1500
-#_NOTIFY_THROTTLE=120
-#_COLOR_FULLY_CHARGED=
-#_COLOR_CHARGING=yellow
-#_COLOR_DISCHARGING=yellow
-#_COLOR_PENDING=blue
-#_COLOR_ERROR=red
-#_COLOR_BATTERY=white
-#_COLOR_ALERT=orange
-#_COLOR_DIRECTIONAL_UP=green
-#_COLOR_DIRECTIONAL_DOWN=red
-#_COLOR_GRADIENT_START=#0000FF
-#_COLOR_GRADIENT_END=#FF0000
-#_SYMBOL_FULLY_CHARGED=
-#_SYMBOL_CHARGING=&#xf0e7;
-#_SYMBOL_DISCHARGING=
-#_SYMBOL_UNKNOWN=&#xf128;
-#_SYMBOL_PENDING=&#xf254;
-#_SYMBOL_ERROR=&#xf00d;
-#_SYMBOL_ALERT=&#xf071;
-#_SYMBOL_BATT_100=&#xf240;
-#_SYMBOL_BATT_75=&#xf241;
-#_SYMBOL_BATT_50=&#xf242;
-#_SYMBOL_BATT_25=&#xf243;
-#_SYMBOL_BATT_0=&#xf244;
-#_SYMBOL_DIRECTION_UP=&#8593;
-#_SYMBOL_DIRECTION_DOWN=&#8595;
+
+# Date and Time
+[time]
+label=📅 
+command=date '+%a %d %b %H:%M'
+interval=5
+color=#BA68C8
+separator=true
