--- a/.config/i3/config
+++ b/.config/i3/config
@@ -17,8 +17,8 @@ bindsym $mod+Return exec alacritty
 # kill focused window
 bindsym $mod+Shift+q kill
 
-# start dmenu (a program launcher)
-bindsym $mod+d exec "rofi -show run"
+# app launcher with icons (Rofi drun)
+bindsym $mod+d exec --no-startup-id rofi -show drun -config ~/.config/rofi/config.rasi
 
 # change focus
 bindsym $mod+j focus left
