--- a/.config/i3/config
+++ b/.config/i3/config
@@ -51,6 +51,9 @@ bindsym $mod+a focus parent
 # focus the child container
 #bindsym $mod+d focus child
 
+# switch between windows (super+tab)
+bindsym $mod+Tab exec --no-startup-id rofi -show combi -modes combi -combi-modes window#ssh
+
 # switch to workspace
 bindsym $mod+1 workspace 1
 bindsym $mod+2 workspace 2
