--- a/.config/i3/i3blocks.conf
+++ b/.config/i3/i3blocks.conf
@@ -1,4 +1,3 @@
-############ i3blocks config (clean, deduplicated) ############
 
 # Global properties
 command=/usr/share/i3blocks/$BLOCK_NAME
@@ -29,20 +28,20 @@ separator=true
 interval=30
 color=#4ECDC4
 
-# Disk usage
-[disk]
-label=💾 
-interval=300
-color=#45B7D1
-separator=true
+# # Disk usage
+# [disk]
+# label=💾 
+# interval=300
+# color=#45B7D1
+# separator=true
 
-# Network bandwidth (adjust instance to your interface if needed)
-[bandwidth]
-instance=wlo1
-label=📡 
-interval=5
-color=#96CEB4
-separator=true
+# # Network bandwidth (adjust instance to your interface if needed)
+# [bandwidth]
+# instance=wlo1
+# label=📡 
+# interval=5
+# color=#96CEB4
+# separator=true
 
 # VPN status (shows when tun0 exists)
 [iface]
