--- a/.config/i3/i3blocks.conf
+++ b/.config/i3/i3blocks.conf
@@ -1,17 +1,10 @@
+############ i3blocks config (clean, deduplicated) ############
 
 # Global properties
 command=/usr/share/i3blocks/$BLOCK_NAME
 separator_block_width=15
-separator=false
-markup=pango
-
-# # Weather (simple one-line from wttr.in)
-[weather]
-label=🌤️ 
-command=curl -Ss 'https://wttr.in/?0&T&Q&format=1' 2>/dev/null || echo "Weather N/A"
-interval=1800
-color=#87CEEB
 separator=true
+markup=pango
 
 # CPU usage
 [cpu_usage]
@@ -19,39 +12,22 @@ label=🖥️
 interval=5
 min_width=🖥️ 100%
 color=#FF6B6B
-separator=true
 
 # Memory usage
 [memory]
 label=🧠 
-separator=true
+min_width=🧠 100%
 interval=30
 color=#4ECDC4
 
-# # Disk usage
-# [disk]
-# label=💾 
-# interval=300
-# color=#45B7D1
-# separator=true
-
-# # Network bandwidth (adjust instance to your interface if needed)
-# [bandwidth]
-# instance=wlo1
-# label=📡 
-# interval=5
-# color=#96CEB4
-# separator=true
-
-# VPN status (shows when tun0 exists)
+# VPN status (shows when MetaCTF exists)
 [iface]
-instance=tun0
+instance=MetaCTF
 color=#3BB92D
-label=🔒 VPN 
+label=🔒 MetaCTF
 interval=10
-separator=true
 
-# Volume (using i3-volume script)
+#  Volume (using i3-volume script)
 [i3volume]
 label=
 command=~/.config/i3/i3-volume/volume output i3blocks
@@ -59,17 +35,17 @@ interval=once
 signal=10
 color=#b8bb26
 separator_block_width=10
-markup=pango
-separator=true
 
-
-# Battery indicator (external script)
+# Battery indicator
 [battery-plus]
 command=~/.config/i3/battery-plus
-markup=pango
-instance=BAT0
-interval=30
-separator=true
+instance=BAT1
+interval=10
+
+[language]
+label=
+command=xkblayout-state print %s | awk '{print toupper(substr($0,1,2))}'
+interval=1
 
 # Date and Time
 [time]
@@ -77,4 +53,3 @@ label=📅
 command=date '+%a %d %b %H:%M'
 interval=5
 color=#BA68C8
-separator=true
