--- a/.config/i3/i3blocks.conf
+++ b/.config/i3/i3blocks.conf
@@ -2,21 +2,27 @@
 
 # Global properties
 command=/usr/share/i3blocks/$BLOCK_NAME
-separator_block_width=15
+separator_block_width=25
 separator=true
 markup=pango
 
 # CPU usage
 [cpu_usage]
-label=🖥️ 
+label=🖥️
 interval=5
 min_width=🖥️ 100%
 color=#FF6B6B
 
 # Memory usage
 [memory]
-label=🧠 
+label=🧠
 min_width=🧠 100%
+interval=30
+color=#4ECDC4
+
+[disk]
+label=💽
+min_width=💽 100%
 interval=30
 color=#4ECDC4
 
@@ -25,22 +31,21 @@ color=#4ECDC4
 instance=MetaCTF
 color=#3BB92D
 label=🔒 MetaCTF
-interval=10
+interval=60
 
 #  Volume (using i3-volume script)
 [i3volume]
 label=
-command=~/.config/i3/i3-volume/volume output i3blocks
-interval=once
+command=~/i3-volume/volume output i3blocks
+interval=5
 signal=10
 color=#b8bb26
-separator_block_width=10
 
 # Battery indicator
 [battery-plus]
 command=~/.config/i3/battery-plus
 instance=BAT1
-interval=10
+interval=60
 
 [language]
 label=
@@ -51,5 +56,5 @@ interval=1
 [time]
 label=📅 
 command=date '+%a %d %b %H:%M'
-interval=5
+interval=1
 color=#BA68C8
