--- a/.config/i3/i3blocks.conf
+++ b/.config/i3/i3blocks.conf
@@ -55,6 +55,6 @@ interval=1
 # Date and Time
 [time]
 label=📅 
-command=date '+%a %d %b %H:%M'
+command=date '+%a %d %b %H:%M:%S'
 interval=1
 color=#BA68C8
