--- a/.config/i3/config
+++ b/.config/i3/config
@@ -132,10 +132,10 @@ bindsym $mod+m exec --no-startup-id arandr
 set $mode_system System (l) lock, (e) logout, (s) suspend, (h) hibernate, (r) reboot, (CTRL+s) shutdown
 
 mode "$mode_system" {
-    bindsym l exec --no-startup-id $i3lockwall, mode "default"
     bindsym e exec --no-startup-id i3-msg exit, mode "default"
-    bindsym s exec --no-startup-id $i3lockwall && systemctl suspend, mode "default"
-    bindsym h exec --no-startup-id $i3lockwall && systemctl hibernate, mode "default"
+    bindsym l exec --no-startup-id ~/.config/i3/scripts/i3lock-color.sh, mode "default"
+    bindsym s exec --no-startup-id ~/.config/i3/scripts/i3lock-color.sh && systemctl suspend, mode "default"
+    bindsym h exec --no-startup-id ~/.config/i3/scripts/i3lock-color.sh && systemctl hibernate, mode "default"
     bindsym r exec --no-startup-id systemctl reboot, mode "default"
     bindsym Ctrl+s exec --no-startup-id systemctl poweroff -i, mode "default"
 
