--- a/.config/i3/config
+++ b/.config/i3/config
@@ -16,6 +16,9 @@ bindsym $mod+Return exec alacritty
 # kill focused window
 bindsym $mod+Shift+q kill
 
+# lock screen
+bindsym $mod+l exec --no-startup-id ~/.config/i3/scripts/i3lock-color.sh
+
 # app launcher with icons (Rofi drun)
 bindsym $mod+d exec --no-startup-id rofi -show drun -config ~/.config/rofi/config.rasi
 
@@ -60,6 +63,11 @@ bindsym $mod+2 workspace 2
 bindsym $mod+3 workspace 3
 bindsym $mod+4 workspace 4
 bindsym $mod+5 workspace 5
+bindsym $mod+6 workspace 6
+bindsym $mod+7 workspace 7
+bindsym $mod+8 workspace 8
+bindsym $mod+9 workspace 9
+bindsym $mod+0 workspace 10
 
 
 # move focused container to workspace
@@ -68,6 +76,11 @@ bindsym $mod+Shift+2 move container to workspace 2
 bindsym $mod+Shift+3 move container to workspace 3
 bindsym $mod+Shift+4 move container to workspace 4
 bindsym $mod+Shift+5 move container to workspace 5
+bindsym $mod+Shift+6 move container to workspace 6
+bindsym $mod+Shift+7 move container to workspace 7
+bindsym $mod+Shift+8 move container to workspace 8
+bindsym $mod+Shift+9 move container to workspace 9
+bindsym $mod+Shift+0 move container to workspace 10
 
 
 # reload the configuration file
@@ -128,20 +141,15 @@ bindsym XF86MonBrightnessDown exec brightnessctl set 5%- # decrease scrPeen brig
 # Display/Monitor auto configuration
 bindsym $mod+m exec --no-startup-id arandr
 
-# shutdown / restart / suspend...  (Press $mod+backspace)
-set $mode_system System (l) lock, (e) logout, (s) suspend, (h) hibernate, (r) reboot, (CTRL+s) shutdown
+# System menu (Press $mod+BackSpace)
+set $mode_system System menu
 
 mode "$mode_system" {
-    bindsym e exec --no-startup-id i3-msg exit, mode "default"
-    bindsym l exec --no-startup-id ~/.config/i3/scripts/i3lock-color.sh, mode "default"
-    bindsym s exec --no-startup-id ~/.config/i3/scripts/i3lock-color.sh && systemctl suspend, mode "default"
-    bindsym h exec --no-startup-id ~/.config/i3/scripts/i3lock-color.sh && systemctl hibernate, mode "default"
-    bindsym r exec --no-startup-id systemctl reboot, mode "default"
-    bindsym Ctrl+s exec --no-startup-id systemctl poweroff -i, mode "default"
+  # Open the rofi power menu when BackSpace is released (no extra keystroke)
+    bindsym --release BackSpace exec --no-startup-id bash -lc '~/.config/i3/scripts/system-menu.sh', mode "default"
 
-    # back to normal: Enter or Escape
-    bindsym Return mode "default"
-    bindsym Escape mode "default"
+  # Cancel
+  bindsym Escape mode "default"
 }
 
 bindsym $mod+BackSpace mode "$mode_system"
