Update i3 and i3blocks configurations: enhance volume control commands and clean up i3blocks config

--- a/.config/i3/i3blocks.conf
+++ b/.config/i3/i3blocks.conf
@@ -1,5 +1,3 @@
-############ i3blocks config (clean, deduplicated) ############
-
 # Global properties
 command=/usr/share/i3blocks/$BLOCK_NAME
 separator_block_width=25
@@ -33,13 +31,13 @@ color=#3BB92D
 label=🔒 MetaCTF
 interval=10
 
-#  Volume (using i3-volume script)
-[i3volume]
-label=
-command=~/i3-volume/volume output i3blocks
-interval=5
-signal=10
-color=#b8bb26
+# #  Volume (using i3-volume script)
+# [i3volume]
+# label=
+# command=~/i3-volume/volume output i3blocks
+# interval=1
+# signal=10
+# color=#b8bb26
 
 # Battery indicator
 [battery-plus]
